Put fixed height back in on the mat thumbs and added overflow hidden

--- a/app/assets/stylesheets/core.css.sass
+++ b/app/assets/stylesheets/core.css.sass
@@ -603,8 +603,9 @@ a .arrow,
     margin: 0 28px 28px 0
     padding: 0
     width: auto
-    // height: 210px
+    height: 210px
     height: auto
+    overflow: hidden
     &:hover
       box-shadow: 0 0 10px #888
       -moz-box-shadow: 0 0 10px #888
@@ -615,7 +616,7 @@ a .arrow,
     margin: 0
     padding: 4px
     width: 144px
-    // height: 202px
+    height: 202px
     text-decoration: none
     background: #f0f0ee
     &:hover
